<resources>
    <string name="app_name">オートロック</string>
    <string name="app_name_sub">Open Sesame</string>

    // main
    <string name="option_setting">設定</string>
    <string name="retry_count">retry count: %1$d</string>
    <string name="external_image_id">external id: %1$s</string>
    <string name="confidence">confidence: %1$s</string>

    // setting
    <string name="setting_device_id">SwitchBot デバイスID</string>
    <string name="setting_api_token">SwitchBot APIトークン</string>
    <string name="setting_take_photo_interval">画像認識間隔(ms)</string>
    <string name="setting_max_retry_count">最大リトライ数</string>
    <string name="setting_confidence_threshold">類似度閾値</string>
    <string name="setting_apply">適用</string>
    <string name="setting_apply_message">設定を適用しました</string>
</resources>
