<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </androidx.camera.view.PreviewView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/informationConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black_transparent"
        android:paddingStart="6dp"
        android:paddingLeft="6dp"
        android:paddingTop="8dp"
        android:paddingEnd="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/retryCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/retry_count"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/externalIdTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/externalIdTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/external_image_id"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/confidenceTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retryCountTextView" />

        <TextView
            android:id="@+id/confidenceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confidence"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/externalIdTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>